--- a/osp7_installer/ansible/roles/osp-overcloud-image/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-overcloud-image/tasks/main.yml
@@ -51,6 +51,12 @@
     - { template_file: 'diff_nexus_fix.patch' }
   when: osp_version == 10
 
+- name: Applying https://review.openstack.org/#/c/537421/
+  shell: |
+    set -o pipefail
+    curl 'https://review.openstack.org/changes/537421/revisions/6a0f77224c3a26d393fbca341f3ee873071bd773/patch?download' | base64 -d | \
+    filterdiff -i *.pp > /home/stack/images/puppet-neutron.patch
+
 - name: Copy tools files
   copy:
     src: /tmp/osp7-install-dci/osp7_installer/ansible/roles/osp-overcloud-image/templates/openstack-tools.tar.gz
