--- a/osp7_installer/conf_common/osp10.conf
+++ b/osp7_installer/conf_common/osp10.conf
@@ -29,11 +29,11 @@ patch_infos = [
                   'path': '/usr/lib/python2.7/site-packages/networking_cisco/services/trunk',
                   'patchfile': 'nw-cisco-542877-diff_trunk.patch',
                 },
-                {
-                  'name': 'puppet-neutron',
-                  'path': '/usr/share/openstack-puppet/modules/neutron',
-                  'patchfile': 'puppet-neutron.patch',
-                },
+#                {
+#                  'name': 'puppet-neutron',
+#                  'path': '/usr/share/openstack-puppet/modules/neutron',
+#                  'patchfile': 'puppet-neutron.patch',
+#                },
               ]
 # BELOW have nexus vars and didn't make it into OSP10 with nw-cisco Release 5.5.0
 #                {
