--- a/osp7_installer/ansible/roles/osp-overcloud-image/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-overcloud-image/tasks/main.yml
@@ -43,19 +43,20 @@
 - name: Install libguestfs-tools
   yum: name=libguestfs-tools
 
+- name: Applying https://review.openstack.org/#/c/537421/
+  shell: |
+    set -o pipefail
+    curl 'https://review.openstack.org/changes/537421/revisions/6a0f77224c3a26d393fbca341f3ee873071bd773/patch?download' | base64 -d | \
+    filterdiff -i *.pp > /home/stack/images/puppet-neutron.patch
+
 - name: Copy image patch files (OSP10, nw-cisco 5.5.0)
   template: src={{ item.template_file }} dest=/home/stack/images/{{ item.template_file }} owner=stack group=stack mode=0755
   with_items:
     - { template_file: 'nw-cisco-534411-DbDupl-MultiC-Brief.patch' }
     - { template_file: 'nw-cisco-542877-diff_trunk.patch' }
     - { template_file: 'diff_nexus_fix.patch' }
+    - { template_file: 'puppet-neutron.patch' }
   when: osp_version == 10
-
-- name: Applying https://review.openstack.org/#/c/537421/
-  shell: |
-    set -o pipefail
-    curl 'https://review.openstack.org/changes/537421/revisions/6a0f77224c3a26d393fbca341f3ee873071bd773/patch?download' | base64 -d | \
-    filterdiff -i *.pp > /home/stack/images/puppet-neutron.patch
 
 - name: Copy tools files
   copy:
