Adding another file to dynamically patch to overcloud image.

--- a/osp7_installer/ansible/roles/osp-overcloud-image/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-overcloud-image/tasks/main.yml
@@ -50,6 +50,7 @@
     - { template_file: 'nw-cisco-542877-diff_trunk.patch' }
     - { template_file: 'diff_nexus_fix.patch' }
     - { template_file: 'puppet-neutron.patch' }
+    - { template_file: 'config.py' }
   when: osp_version == 10
 
 - name: Copy tools files
