--- a/osp7_installer/ansible/roles/osp-overcloud-image/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-overcloud-image/tasks/main.yml
@@ -50,7 +50,6 @@
     - { template_file: 'nw-cisco-542877-diff_trunk.patch' }
     - { template_file: 'diff_nexus_fix.patch' }
     - { template_file: 'puppet-neutron.patch' }
-    - { template_file: 'config.py' }
   when: osp_version == 10
 
 - name: Copy tools files
@@ -60,6 +59,15 @@
     owner: stack
     group: stack
     mode: 0755
+
+- name: Copy config.py
+  copy:
+    src: /tmp/osp7-install-dci/osp7_installer/ansible/roles/osp-overcloud-image/templates/config.py
+    dest: /home/stack/images/config.py
+    owner: stack
+    group: stack
+    mode: 0755
+
 
 - name: Lets try and sleep a bit
   sudo_user: stack
