--- a/osp7_installer/ansible/roles/osp-overcloud/templates/compute.yaml
+++ b/osp7_installer/ansible/roles/osp-overcloud/templates/compute.yaml
@@ -123,10 +123,10 @@ resources:
                 #  addresses:
                 #    -
                 #      ip_netmask: {get_param: ManagementIpSubnet}
-
             -
               type: ovs_bridge
-              name: {get_input: bridge_name}
+              #name: {get_input: bridge_name}
+              name: br-tenant
               use_dhcp: false
               members:
                 -
