Ensure we create the public network on the right physical network

--- a/artifacts/bxb_osp.conf
+++ b/artifacts/bxb_osp.conf
@@ -165,6 +165,8 @@ overcloud_floating_ip_network_gateway = 20.0.0.1
 undercloud_fake_gw_ip = 20.0.0.1
 undercloud_fake_gw_ip_prefix = 24
 
+create_ext_net_vlan_provider = True
+
 network_nexus_config = {
 		"B9-TOR-9K-1": {
 			"ip_address": "10.86.1.34",
