--- a/artifacts/bxb_osp.conf
+++ b/artifacts/bxb_osp.conf
@@ -171,7 +171,7 @@ network_nexus_config = {
 		"B9-TOR-9K-1": {
 			"ip_address": "10.86.1.34",
 			"username": "admin",
-			"password": "cisco123",
+			"password": "openstack123!",
 			"nve_src_intf": 2,
 			"ssh_port": 22,
 			"physnet": "datacentre",
@@ -184,7 +184,7 @@ network_nexus_config = {
 		"B9-TOR-9K-2": {
 			"ip_address": "10.86.1.33",
 			"username": "admin",
-			"password": "cisco123",
+			"password": "openstack123!",
 			"nve_src_intf": 2,
 			"ssh_port": 22,
 			"physnet": "datacentre",
@@ -195,4 +195,4 @@ network_nexus_config = {
 						"06:00:C0:07:00:F0": {"ports": "port-channel:301,port-channel:1,port-channel:2" },
 						"06:00:C0:06:00:F0": {"ports": "port-channel:301,port-channel:1,port-channel:2" }}}}
 
-switch_tempest_section = [{'username': 'admin', 'password': 'cisco123', 'hostname': 'B9-TOR-9K-1', 'sw': '10.86.1.34'}, {'username': 'admin', 'password': 'cisco123', 'hostname': 'B9-TOR-9K-2', 'sw': '10.86.1.33'}]
+switch_tempest_section = [{'username': 'admin', 'password': 'openstack123!', 'hostname': 'B9-TOR-9K-1', 'sw': '10.86.1.34'}, {'username': 'admin', 'password': 'openstack123!', 'hostname': 'B9-TOR-9K-2', 'sw': '10.86.1.33'}]
