--- a/artifacts/bxb_osp.conf
+++ b/artifacts/bxb_osp.conf
@@ -155,9 +155,11 @@ overcloud_external_ip_cidr = 172.20.208.0/20
 overcloud_external_ip_start = 172.20.208.5
 overcloud_external_gateway = 172.20.208.1
 overcloud_external_ip_end = 172.20.223.253
+overcloud_director_ip = 172.20.208.85
+overcloud_mask = 255.255.240.0
 
 
-# IMPORTNANT: Not-routed network
+# IMPORTANT: Not-routed network
 overcloud_floating_ip_cidr = 20.0.0.0/24
 overcloud_floating_ip_start = 20.0.0.10
 overcloud_floating_ip_end = 20.0.0.200
@@ -194,5 +196,7 @@ network_nexus_config = {
 						"06:00:C0:05:00:F0": {"ports": "port-channel:301,port-channel:1,port-channel:2" },
 						"06:00:C0:07:00:F0": {"ports": "port-channel:301,port-channel:1,port-channel:2" },
 						"06:00:C0:06:00:F0": {"ports": "port-channel:301,port-channel:1,port-channel:2" }}}}
+
+network_cntlr_mech_driver = 'openvswitch', 'cisco_ucsm', 'cisco_nexus'
 
 switch_tempest_section = [{'username': 'admin', 'password': '***REMOVED***', 'hostname': 'B9-TOR-9K-1', 'sw': '10.86.1.34'}, {'username': 'admin', 'password': '***REMOVED***', 'hostname': 'B9-TOR-9K-2', 'sw': '10.86.1.33'}]
