--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -134,6 +134,7 @@ neutron_flat_networks = datacentre,external
 # neutron_bridge_mappings = datacentre:br-ex
 neutron_external_bridge = br-ex
 neutron_tenant_bridge = br-ex
+neutron_external_vlan = overcloud_external_vlan
 
 create_ext_net_vlan_provider = False
 
