--- a/osp7_installer/ansible/roles/osp-director/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-director/tasks/main.yml
@@ -22,20 +22,20 @@
     - {option: 'proxy_hostname', value: 'proxy-wsa.esl.cisco.com'}
     - {option: 'proxy_port', value: '80'}
 
-- name:  Test for ifcfg-user already configured
-  shell: grep IPADDR /etc/sysconfig/network-scripts/ifcfg-user
+- name:  Test for ifcfg-usernet already configured
+  shell: grep IPADDR /etc/sysconfig/network-scripts/ifcfg-usernet
   ignore_errors: true
-  register: ifcfg_user_cfgd
+  register: ifcfg_usernet_cfgd
 
 - name:  Config static route to overcloud nodes if not configured for BXB
   shell: >
     sed -i '$i/sbin/route add -net {{ overcloud_network_cidr }} gw {{ overcloud_external_gateway }}' /etc/rc.local;
-    sed -i 's/BOOTPROTO=dhcp/BOOTPROTO=static/' /etc/sysconfig/network-scripts/ifcfg-user;
-    sed -i 's/PEERDNS=no/IPADDR={{ overcloud_director_ip }}/' /etc/sysconfig/network-scripts/ifcfg-user;
-    sed -i '$iNETMASK={{ overcloud_mask }}' /etc/sysconfig/network-scripts/ifcfg-user;
+    sed -i 's/BOOTPROTO=dhcp/BOOTPROTO=static/' /etc/sysconfig/network-scripts/ifcfg-usernet;
+    sed -i 's/PEERDNS=no/IPADDR={{ overcloud_director_ip }}/' /etc/sysconfig/network-scripts/ifcfg-usernet;
+    sed -i '$iNETMASK={{ overcloud_mask }}' /etc/sysconfig/network-scripts/ifcfg-usernet;
     systemctl restart network
   ignore_errors: true
-  when: test_for_bxb|success and ifcfg_user_cfgd|failed
+  when: test_for_bxb|success and ifcfg_usernet_cfgd|failed
 
 - name: Set RHEL Channels
   shell: subscription-manager repos --enable=rhel-7-server-openstack-7.0-director-rpms --enable=rhel-7-server-openstack-7.0-rpms
