Ensure rule to allow all NFS traffic works
The iptables rule to allow all NFS traffic to the director node was being appended to the list of rules after all the rules added by instack-undercloud here: https://github.com/openstack/puppet-tripleo/blob/master/manifests/firewall/post.pp. This resulting in the overcloud services being unable to mount the NFS volumes causing cinder and glance to fail.

--- a/osp7_installer/ansible/roles/nfs-shares/tasks/main.yml
+++ b/osp7_installer/ansible/roles/nfs-shares/tasks/main.yml
@@ -24,6 +24,6 @@
   register: iptables_nfs_check
 
 - name: Allow NFS in iptables (in memory)
-  shell: iptables -A INPUT -p tcp -m tcp --dport 2049 -j ACCEPT
+  shell: iptables -I INPUT -p tcp -m tcp --dport 2049 -j ACCEPT
   when: iptables_nfs_check|failed
 
