--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,8 @@ deps = -r{toxinidir}/test-requirements.txt
 [testenv:linters]
 commands =
   flake8
-  yamllint --strict playbooks
-  find playbooks/ -type f -exec python tools/j2-lint.py '\{\}' +
+  yamllint --strict installer
+  find installer/ -type f -exec python tools/j2-lint.py '\{\}' +
 whitelist_externals = find
 
 [flake8]
