--- a/installer/step3-install-overcloud/osp13/tasks.yaml
+++ b/installer/step3-install-overcloud/osp13/tasks.yaml
@@ -101,6 +101,30 @@
         BlockStorageCount: {{ overcloud_block_storage_scale }}
         ObjectStorageCount: {{ overcloud_swift_storage_scale }}
 
+- name: Write out json converter template
+  copy:
+    dest: /home/stack/templates/json_converter.yaml
+    content: |
+      heat_template_version: 2015-04-30
+
+      parameters:
+        data:
+          type: json
+
+      resources:
+        DummyResource:
+          type: OS::Heat::SoftwareConfig
+          properties:
+            group: script
+            config: |
+              #!/bin/bash
+              echo "Dummy"
+
+      outputs:
+        converted:
+          description: Json data
+          value: { get_param: data }
+
 - name: Create extended AllNodesExtraConfig to remove domain names
   copy:
     dest: /home/stack/templates/extended_nodes_extra_config.yaml
@@ -116,6 +140,65 @@
           type: OS::TripleO::NetCiscoOriginal
           properties:
             servers: {get_param: servers}
+
+        SlurpExistingNetCiscoData:
+          type: OS::Heat::SoftwareConfig
+          properties:
+            group: script
+            outputs:
+              - type: Json
+                name: net_cisco_data
+                description: "The corrected net_cisco heira data"
+            config: |
+              #!/bin/python
+              import json
+              import os
+
+              heat_outputs_path = os.environ.get("heat_outputs_path")
+              output_name = "net_cisco_data"
+
+              # Load old hieradata from the config file written by the original net cisco template
+              with open("/etc/puppet/hieradata/neutron_cisco_data.json") as oldjson:
+                  oldconfig = json.loads(oldjson.read())
+
+              # Convert nexus config string into nexus config json
+              nexus_config = json.loads(oldconfig["mapped_data"]["neutron::plugins::ml2::cisco::nexus::nexus_config"])
+              oldconfig["mapped_data"]["neutron::plugins::ml2::cisco::nexus::nexus_config"] = nexus_config
+
+              # Write json to outputs directory
+              with open('%s.%s' % (heat_outputs_path, output_name), 'w') as out:
+                  out.write(json.dumps(oldconfig))
+
+        SlurpExistingNetCiscoDataDeploy:
+          type: OS::Heat::SoftwareDeployment
+          depends_on: ConfigureML2
+          properties:
+            name: SlurpExistingNetCiscoDataDeploy
+            server:  {get_param: [servers, Controller, '0']}
+            config: {get_resource: SlurpExistingNetCiscoData}
+            actions: ['CREATE']
+
+        ConvertToJson:
+          type: OS::TripleO::JsonConverter
+          properties:
+            data: {get_attr: [SlurpExistingNetCiscoDataDeploy, net_cisco_data]}
+
+        UCSMHostListConfig:
+          type: OS::Heat::StructuredConfig
+          properties:
+            group: os-apply-config
+            config:
+              hiera:
+                datafiles:
+                  neutron_cisco_data: {get_attr: [ConvertToJson, converted]}
+
+        NetworkCiscoDeployment:
+          type: OS::Heat::StructuredDeployments
+          properties:
+            name: NetworkCiscoDeployment
+            config: {get_resource: UCSMHostListConfig}
+            servers:  {get_param: [servers, Controller]}
+            actions: ['CREATE']
 
 - name: Create template to install different version of networking-cisco before puppet runs
   copy:
@@ -156,6 +239,7 @@
         OS::TripleO::ControllerExtraConfigPre: /home/stack/templates/controller_extra_config_prepuppet.yaml
         OS::TripleO::AllNodesExtraConfig: /home/stack/templates/extended_nodes_extra_config.yaml
         OS::TripleO::NetCiscoOriginal: /usr/share/openstack-tripleo-heat-templates/puppet/extraconfig/all_nodes/neutron-ml2-cisco-nexus-ucsm.yaml
+        OS::TripleO::JsonConverter: /home/stack/templates/json_converter.yaml
 
       parameter_defaults:
         InternalApiNetworkVlanID: {{ testbed_vlan }}
