OSP13 hiera data section not longer uses os-apply-config

--- a/installer/step3-install-overcloud/osp13/tasks.yaml
+++ b/installer/step3-install-overcloud/osp13/tasks.yaml
@@ -186,11 +186,10 @@
         UCSMHostListConfig:
           type: OS::Heat::StructuredConfig
           properties:
-            group: os-apply-config
+            group: hiera
             config:
-              hiera:
-                datafiles:
-                  neutron_cisco_data: {get_attr: [ConvertToJson, converted]}
+              datafiles:
+                neutron_cisco_data: {get_attr: [ConvertToJson, converted]}
 
         NetworkCiscoDeployment:
           type: OS::Heat::StructuredDeployments
