Begin to add playbook to support fast forward upgrades of OSP

--- a/installer/step2-install-undercloud/osp10/tasks.yaml
+++ b/installer/step2-install-undercloud/osp10/tasks.yaml
@@ -233,3 +233,5 @@
     ip addr | grep -q {{ overcloud_director_ip }} ||
     ip addr add {{ overcloud_director_ip }} dev usernet
   become: true
+
+# TODO(sambetts) Persist the network changes from above so they survive reboot
