--- a/installer/step3-install-overcloud/osp10/tasks.yaml
+++ b/installer/step3-install-overcloud/osp10/tasks.yaml
@@ -56,7 +56,7 @@
     source /home/stack/stackrc
     openstack hypervisor stats show --format value -c count
   register: hypervisor_count
-  until: hypervisor_count.stdout == '{{ total_overcloud_node_count }}'
+  until: hypervisor_count.stdout == total_overcloud_node_count
   retries: 12
   delay: 10
 
