Remove domains from ucsm host list config in OSP13

--- a/installer/step3-install-overcloud/osp13/tasks.yaml
+++ b/installer/step3-install-overcloud/osp13/tasks.yaml
@@ -220,6 +220,16 @@
               nexus_config = json.loads(oldconfig["neutron::plugins::ml2::cisco::nexus::nexus_config"])
               oldconfig["neutron::plugins::ml2::cisco::nexus::nexus_config"] = nexus_config
 
+              # Remove domains from the ucsm host list
+              existing_ucsm_config = oldconfig["neutron::plugins::ml2::cisco::ucsm::ucsm_host_list"]
+              new_ucsm_hosts = []
+              for oldhost in existing_ucsm_config.split(","):
+                oldhost = oldhost.strip()
+                host, sp = oldhost.split(":")
+                host = host.split(".")[0]
+                new_ucsm_hosts.append("%s:%s" % (host, sp))
+              oldconfig["neutron::plugins::ml2::cisco::ucsm::ucsm_host_list"] = ",".join(new_ucsm_hosts)
+
               # Write json to outputs directory
               with open('%s.%s' % (heat_outputs_path, output_name), 'w') as out:
                   out.write(json.dumps(oldconfig))
