--- a/installer/step2-install-undercloud/osp13/tasks.yaml
+++ b/installer/step2-install-undercloud/osp13/tasks.yaml
@@ -37,7 +37,7 @@
     state: disabled
   become: true
 
-- name: Enable required RHEL repos
+- name: Enable required RHEL server repos
   rhsm_repository:
     name: "{{ item }}"
     state: enabled
@@ -46,8 +46,20 @@
     - rhel-7-server-extras-rpms
     - rhel-7-server-rh-common-rpms
     - rhel-ha-for-rhel-7-server-rpms
-    - rhel-7-server-openstack-13-rpms
   become: true
+
+- name: Enable required RHEL openstack repos
+  rhsm_repository:
+    name: rhel-7-server-openstack-13-rpms
+    state: enabled
+  become: true
+  when: dci_baseurl is not defined
+
+- name: Enable DCI openstack repos
+  shell:
+    yum-config-manager --add-repo {{ dci_baseurl }}/dci_repo/dci_repo.repo
+  become: true
+  when: dci_baseurl is defined
 
 - name: Update all the system packages
   yum:
